# SONAR

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
agents/: Alex.md  architect.md  cio-subagent.md  cio.md  engineer-subagent.md  engineer.md  prompt-engineer.md
assets/maps/: test_level.glb
docs/: gdd.md  tdd.md
docs/adr/: 0001-tech-stack.md  0002-project-structure.md  0003-deps-management.md  0004-m3-gap-log.md  0005-sonar-visual-design.md  0006-world-authoring-blender-gltf.md  0007-entity-system.md  0008-trigger-stalker-entities.md  0009-door-collision-toggle.md
docs/api/: core.md  entity.md  render.md  stalker.md  trigger.md  vfx_particles.md  world.md
docs/guides/: blender-level-authoring.md
shaders/: basic.frag  basic.vert  hud.vert  laser.frag  laser.vert  particle.frag  particle.vert  sonar.frag  sonar.vert  text.frag  text.vert  vignette.frag  vignette.vert
src/: main.c
src/audio/: audio.c  audio.h  sound.c  sound.h  spatial.c  spatial.h
src/core/: input.c  input.h  log.h  timer.c  timer.h  window.c  window.h
src/render/: camera.c  camera.h  hud.c  hud.h  mesh.c  mesh.h  model.c  model.h  renderer.c  renderer.h  shader.c  shader.h  sonar_fx.c  sonar_fx.h  vfx.c  vfx.h  vfx_particles.c  vfx_particles.h
src/sonar/: energy.c  energy.h  raycast.c  raycast.h  sonar.c  sonar.h
src/world/: entity.c  entity.h  map.c  map.h  physics.c  physics.h  stalker.c  stalker.h  trigger.c  trigger.h
